[project]
name = "leto-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.17.1",
    "fastapi[standard]>=0.120.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
]
